--- a/src/Pages/HomePageResponsive.css
+++ b/src/Pages/HomePageResponsive.css
@@ -5,7 +5,8 @@
         margin-left: auto;
         overflow: hidden;
     }
-    .Flash-sales-slider .slider  {
+
+    .Flash-sales-slider .slider {
         /* border: 2px solid blue; */
         max-width: 1200px;
     }
@@ -14,64 +15,484 @@
         border: 2px solid green;
         max-width: 1200px;
     }
-    
+
     .center-slider {
         /* border: 2px solid red; */
         max-width: 1100px;
         overflow: hidden;
     }
-    .center-slider .slider  {
+
+    .center-slider .slider {
         /* border: 2px solid blue; */
         max-width: 1100px;
     }
-    
+
 }
 
 
-@media (min-width: 800px) and (max-width: 1279px) {
+
+
+@media (min-width: 1170px) and (max-width: 1279px) {
+
+    /* Top header */
+    .top-header {
+        border: 2px solid red;
+        max-width: 200px;
+        margin-left: auto;
+        margin-right: 3%;
+    }
+
+    .top-header-content{
+        border: 2px solid red;
+        display: flex;
+        width: 60%;
+    }
+
+    /* Navigation Bar component */
+    .navigation-bar {
+        border: 2px solid red;
+        max-width: 1000px;
+    }
+
+
+    /* top slider */
+    .top-slider {
+        border: 2px solid blue;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    /* side bar */
+    .side-bar {
+        border: 2px solid green;
+        flex-direction: column;
+        width: 900px;
+        max-height: 65px;
+        overflow-x: auto;
+        overflow-x: hidden;
+    }
+
+    .side-bar ul {
+        border: 2px solid blue;
+        display: flex;
+        width: 900px;
+        flex-direction: row;
+        justify-content: center;
+        align-items: anchor-center;
+        gap: 0px 0px;
+        overflow-x: auto;
+        scrollbar-width: none;
+        display: flex;
+        display: -webkit-inline-box;
+    }
+
+    .side-bar ul .women-fashion-li {
+        border: 2px solid blue;
+        width: 140px;
+        margin-top: auto;
+    }
+
+
+    .side-bar ul li img {
+        border: 2px solid blue;
+        display: none;
+    }
+
+    .side-bar ul li{
+        border: 2px solid red;
+        padding: 3px;
+        border-radius: 19px;
+        cursor: pointer;
+    }
+    
+    .side-bar ul li:hover {
+        background-color: rgb(224, 222, 222);
+        color: rgb(46, 46, 46);
+    }
+    .side-bar ul li a:hover {
+        color: rgb(46, 46, 46);
+    }
+
+
+    /* flash sales slider */
     .Flash-sales-slider {
         border: 2px solid red;
-        max-width: 1080px;
+        max-width: 1050px;
         margin-left: auto;
         overflow: hidden;
     }
 
-    .Flash-sales-slider .slider  {
+    .Flash-sales-slider .slider {
         border: 2px solid blue;
-        max-width: 1080px;
+        max-width: 1050px;
     }
 
     .Flash-sales-slider .slider .container {
         border: 2px solid green;
         max-width: 1080px;
     }
-    
 
+
+    /* center slider */
     .center-slider {
         border: 2px solid red;
-        max-width: 980px;
+        max-width: 1000px;
         overflow: hidden;
     }
-    .center-slider .slider  {
+
+    .center-slider .slider {
         border: 2px solid blue;
-        max-width: 980px;
+        max-width: 1000px;
     }
 
-    .products-container{
+    .products-container {
         border: 2px solid red;
         max-width: 1000px;
     }
-    .product-card{
+
+    .product-card {
         border: 2px solid blue;
+        max-width: 225px;
+    }
+
+   
+    .image-slider {
+        width: 892px;
+    }
+
+
+    /* Category Enhance your music component */
+    .category-enhance-your-music {
+        border: 2px solid red;
+        max-width: 1000px;
+    }
+
+    .category-enhance-your-music .category-left {
+        border: 2px solid red;
+        max-width: 380px;
+        z-index: 1;
+    }
+
+    .category-enhance-your-music .category-right {
+        border: 2px solid red;
+        max-width: 530px;
+    }
+
+
+    /* New Arrival Component */
+    .new-arrival-component {
+        max-width: 1000px;
+        border: 2px solid red;
+    }
+
+    .new-arrival-component .right-div {
+        max-width: 480px;
+    }
+
+    .new-arrival-component .right-div .right-top-div .right-top-new-arrival-header {
+        margin-right: 32%;
+    }
+
+    .new-arrival-component .left-div {
+        width: 480px;
+    }
+
+    .new-arrival-component .right-div .right-bottom-div .right-bottom-left-div {
         max-width: 220px;
     }
 
-    .slider-itemwidth-movement{
-        /* width: 320px; */
-        transform: translateX(120px);
+    .new-arrival-component .right-div .right-bottom-div .right-bottom-right-div {
+        max-width: 220px;
     }
-    .image-slider{
-        width: 892px;
+
+    /* Bottom components */
+    .bottom-components-div {
+        border: 2px solid red;
+        max-width: 900px;
+    }
+
+
+    /* Footer */
+    .footer {
+        border: 2px solid red;
+        max-width: 1000px;
+    }
+
+}
+
+
+
+
+
+@media (min-width: 850px) and (max-width: 1169px) {
+    hr{
+        max-width: 100%;
+    }
+
+
+
+    /* Top header */
+    .top-header {
+        border: 2px solid red;
+        max-width: 10%;
+        margin-left: auto;
+        margin-right: 3%;
+        align-self: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    .top-header-content{
+        border: 2px solid red;
+        display: flex;
+        width: 70%;
+        justify-content: center;
+    }
+
+    /* Navigation Bar component */
+    .navigation-bar {
+        border: 2px solid red;
+        max-width: 93%;
+
+    }
+
+    .navigation-bar .list{
+
+        border: 2px solid blue;
+        gap: 4%;
+        width: 35%;
+    }
+    .navigation-bar .list ul{
+
+        border: 2px solid green;
+        gap: 8%;
+        max-width: 100%;
+    }
+
+    .navigation-bar .navbar-right{
+
+        border: 2px solid green;
+        gap: 8%;
+        width: 42%;
+    }
+
+
+    /* top slider */
+    .top-slider {
+        border: 2px solid blue;
+        flex-direction: column;
+        align-items: center;
+        /* width: 70%  ; */
+    }
+
+
+    .top-slider .slider{
+        border: 2px solid blue;
+        flex-direction: column;
+        align-items: center;
+        width: fit-content;
+        width: 80%;
+    }
+
+
+    /* side bar */
+    .side-bar {
+        border: 2px solid green;
+        flex-direction: column;
+        width: 80%;
+        max-height: 65px;
+        overflow-x: auto;
+        overflow-x: hidden;
+    }
+
+    .side-bar ul {
+        border: 2px solid blue;
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        align-items: anchor-center;
+        gap: 0px 0px;
+        overflow-x: auto;
+        scrollbar-width: none;
+        display: flex;
+        display: -webkit-inline-box;
+    }
+
+    .side-bar ul .women-fashion-li {
+        border: 2px solid blue;
+        width: 140px;
+        margin-top: auto;
+    }
+
+
+    .side-bar ul li img {
+        border: 2px solid blue;
+        display: none;
+    }
+
+    .side-bar ul li{
+        border: 2px solid red;
+        padding: 3px;
+        border-radius: 19px;
+        cursor: pointer;
     }
     
+    .side-bar ul li:hover {
+        background-color: rgb(224, 222, 222);
+        color: rgb(46, 46, 46);
+    }
+    .side-bar ul li a:hover {
+        color: rgb(46, 46, 46);
+    }
+
+
+    /* flash sales slider */
+    .Flash-sales-slider {
+        border: 2px solid red;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .Flash-sales-slider .slider {
+        border: 2px solid blue;
+        max-width: 80%;
+    }
+
+    .Flash-sales-slider .slider .container {
+        border: 2px solid green;
+        max-width: 100%;
+    }
+    .main-container {
+        /* width: 100vw;     */
+         border: 2px solid green;
+        
+    }
+
+
+    /* center slider */
+    .center-slider {
+        border: 2px solid red;
+        width: 98vw;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+    }
+
+    .center-slider .slider {
+        border: 2px solid blue;
+        max-width: 80%;
+    }
+
+    .center-slider .slider .container {
+        border: 2px solid green;
+        max-width: 100%;
+    }
+
+    .products-container {
+        border: 2px solid red;
+        max-width: 80%;
+    }
+
+    .product-card {
+        border: 2px solid blue;
+        max-width: 23%;
+        /* height: fit-content; */
+        /* height: 60%; */
+    }
+
+    .slider-itemwidth-movement {
+        transform: translateX(200px);
+        /* need to do */
+    }
+
+    .image-slider {
+        width: 892px;
+    }
+
+
+    /* Category Enhance your music component */
+    .category-enhance-your-music {
+        border: 2px solid red;
+        max-width: 80%;
+    }
+
+    .category-enhance-your-music .category-left {
+        border: 2px solid red;
+        max-width: 30%;
+        z-index: 1;
+    }
+
+    .category-enhance-your-music .category-right{
+        border: 2px solid red;
+        max-width: 60%;
+    }
+
+    .category-enhance-your-music .category-right img{
+        /* border: 2px solid red; */
+        max-width: 50%;
+    }
+
+
+    /* New Arrival Component */
+    .new-arrival-component {
+        max-width: 80%;
+        border: 2px solid red;
+        /* max-height: 600px; */
+    }
+
+    .new-arrival-component .right-div {
+        max-width: 48%;
+        /* max-height: 500; */
+    }
+
+    .new-arrival-component .right-div .right-top-div .right-top-new-arrival-header {
+        margin-right: 32%;
+    }
+
+    .new-arrival-component .left-div {
+        width: 48%;
+        /* max-height: 510px; */
+    }
+
+    .new-arrival-component .right-div .right-bottom-div .right-bottom-left-div {
+        max-width: 45%;
+        /* max-height: 195px; */
+    }
+
+    .new-arrival-component .right-div .right-bottom-div .right-bottom-right-div {
+        max-width: 45%;
+        /* max-height: 195px; */
+
+    }
+
+    .new-arrival-left-content{
+        margin-right: -10%;
+    }
+
+
+    /* Bottom components */
+    .bottom-components-div {
+        border: 2px solid red;
+        max-width: 80%;
+    }
+
+    .bottom-components-div .bottom-components {
+        border: 2px solid red;
+        max-width: 29%;
+    }
+
+
+    /* Footer */
+    .footer {
+        border: 2px solid red;
+        max-width: 800px;
+    }
+
 }
