--- a/src/Pages/HomePageResponsive.css
+++ b/src/Pages/HomePageResponsive.css
@@ -67,7 +67,7 @@
     .side-bar {
         border: 2px solid green;
         flex-direction: column;
-        width: 900px;
+        width: 85%;
         max-height: 65px;
         overflow-x: auto;
         overflow-x: hidden;
@@ -76,7 +76,7 @@
     .side-bar ul {
         border: 2px solid blue;
         display: flex;
-        width: 900px;
+        width: 100%;
         flex-direction: row;
         justify-content: center;
         align-items: anchor-center;
@@ -230,8 +230,6 @@
         max-width: 100%;
     }
 
-
-
     /* Top header */
     .top-header {
         border: 2px solid red;
@@ -302,7 +300,7 @@
     .side-bar {
         border: 2px solid green;
         flex-direction: column;
-        width: 80%;
+        width: 85%;
         max-height: 65px;
         overflow-x: auto;
         overflow-x: hidden;
@@ -401,8 +399,9 @@
     }
 
     .product-card {
-        border: 2px solid blue;
-        max-width: 23%;
+        border: 2px solid red;
+        /* max-width: 23%; */
+        max-width: 220px;
         /* height: fit-content; */
         /* height: 60%; */
     }
@@ -486,6 +485,7 @@
     .bottom-components-div .bottom-components {
         border: 2px solid red;
         max-width: 29%;
+        text-align: center;
     }
 
 
@@ -493,6 +493,323 @@
     .footer {
         border: 2px solid red;
         max-width: 800px;
+    }
+
+}
+
+
+
+
+
+@media (min-width: 600px) and (max-width: 849px) {
+    hr{
+        max-width: 100%;
+    }
+
+    /* Top header */
+    .top-header {
+        border: 2px solid red;
+        max-width: 10%;
+        margin-left: auto;
+        margin-right: 3%;
+        align-self: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    .top-header-content{
+        border: 2px solid red;
+        display: flex;
+        width: 70%;
+        justify-content: center;
+    }
+
+    /* Navigation Bar component */
+    .navigation-bar {
+        border: 2px solid red;
+        max-width: 93%;
+
+    }
+
+    .navigation-bar .list{
+
+        border: 2px solid blue;
+        gap: 4%;
+        width: 35%;
+    }
+    .navigation-bar .list ul{
+
+        border: 2px solid green;
+        gap: 8%;
+        max-width: 100%;
+    }
+
+    .navigation-bar .navbar-right{
+
+        border: 2px solid green;
+        gap: 8%;
+        width: 42%;
+    }
+
+
+    /* top slider */
+    .top-slider {
+        border: 2px solid blue;
+        flex-direction: column;
+        align-items: center;
+        /* width: 70%  ; */
+        margin-bottom: -60px
+    }
+
+
+    .top-slider .slider{
+        content-visibility: hidden;
+    }
+
+
+    /* side bar */
+    .side-bar {
+        border: 2px solid green;
+        flex-direction: column;
+        width: 85%;
+        max-height: 65px;
+        overflow-x: auto;
+        overflow-x: hidden;
+    }
+
+    .side-bar ul {
+        border: 2px solid blue;
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        align-items: anchor-center;
+        gap: 0px 0px;
+        overflow-x: auto;
+        scrollbar-width: none;
+        display: flex;
+        display: -webkit-inline-box;
+    }
+
+    .side-bar ul .women-fashion-li {
+        border: 2px solid blue;
+        width: 140px;
+        margin-top: auto;
+    }
+
+
+    .side-bar ul li img {
+        border: 2px solid blue;
+        display: none;
+    }
+
+    .side-bar ul li{
+        border: 2px solid red;
+        padding: 3px;
+        border-radius: 19px;
+        cursor: pointer;
+    }
+    
+    .side-bar ul li:hover {
+        background-color: rgb(224, 222, 222);
+        color: rgb(46, 46, 46);
+    }
+    .side-bar ul li a:hover {
+        color: rgb(46, 46, 46);
+    }
+
+
+    /* flash sales slider */
+    .Flash-sales-slider {
+        border: 2px solid red;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .Flash-sales-slider .slider {
+        border: 2px solid blue;
+        max-width: 90%;
+    }
+
+    .Flash-sales-slider .slider .container {
+        border: 2px solid green;
+        max-width: 100%;
+    }
+    .main-container {
+        /* width: 100vw;     */
+         border: 2px solid green;
+        
+    }
+
+
+    /* center slider */
+    .center-slider {
+        border: 2px solid red;
+        width: 98vw;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+    }
+
+    .center-slider .slider {
+        border: 2px solid blue;
+        max-width: 80%;
+    }
+
+    .center-slider .slider .container {
+        border: 2px solid green;
+        max-width: 100%;
+    }
+
+    .products-container {
+        border: 2px solid red;
+        max-width: 80%;
+    }
+
+    .product-card {
+        border: 2px solid red;
+        /* max-width: 23%; */
+        max-width: 220px;
+        /* height: fit-content; */
+        /* height: 60%; */
+    }
+
+    .slider-itemwidth-movement {
+        transform: translateX(200px);
+        /* need to do */
+    }
+
+    .image-slider {
+        width: 892px;
+    }
+
+
+    /* Category Enhance your music component */
+    .category-enhance-your-music {
+        border: 2px solid red;
+        max-width: 80%;
+    }
+
+    .category-enhance-your-music .category-left {
+        border: 2px solid red;
+        max-width: 30%;
+        z-index: 1;
+    }
+
+    .category-enhance-your-music .category-right{
+        border: 2px solid red;
+        max-width: 60%;
+    }
+
+    .category-enhance-your-music .category-right img{
+        /* border: 2px solid red; */
+        max-width: 50%;
+    }
+
+
+    /* New Arrival Component */
+    .new-arrival-component {
+        max-width: 90%;
+        border: 2px solid red;
+        /* height: 100px; */
+        min-height: max-content;
+    }
+
+    .new-arrival-component-images{
+        display: flex;
+        flex-direction: column;
+        border: 2px solid blue;
+        /* justify-content: space-between; */
+        /* align-items: center; */
+        height: 1200px;
+        margin-top: 50px;
+    }
+
+    .bottom-img{
+        max-width: 50%;
+    }
+
+    .new-arrival-component .right-div {
+        /* max-width: 100%; */
+        width: auto;
+        /* height: auto; */
+        /* max-height: 500; */
+    }
+
+    .new-arrival-component .right-div .right-top-div .right-top-new-arrival-header {
+        margin-right: 32%;
+    }
+
+    .new-arrival-component .left-div {
+        width: auto;
+        height: auto;
+        /* max-height: 510px; */
+    }
+
+    .new-arrival-component .right-div .right-bottom-div .right-bottom-left-div {
+        width: 305px;
+        /* max-height: 195px; */
+    }
+
+
+    .new-arrival-component .right-div .right-bottom-div{
+        border: 2px solid blue;
+    }
+
+
+    .new-arrival-component .right-div .right-bottom-div .right-bottom-right-div {
+        width: 305px;
+        /* max-height: 195px; */
+    }
+
+    .new-arrival-left-content{
+        margin-right: -10%;
+    }
+
+
+    /* Bottom components */
+    .bottom-components-div {
+        border: 2px solid red;
+        max-width: 80%;
+        height: 220px;
+    }
+
+    .bottom-components-div .bottom-components {
+        border: 2px solid red;
+        max-width: 29%;
+        text-align: center;
+        min-height: max-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+    }
+
+
+    /* Footer */
+    .footer {
+        border: 2px solid red;
+        max-width: 800px;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        min-height: 500px;
+        justify-content: center;
+        align-items: center;
+        max-width: 90%;
+    }
+    .footer-container{
+        /* background-color: black; */
+        min-height:700px;
+    }
+
+    .footer .footer-lower{
+        width: 100%;
     }
 
 }
